# PostGenerator-Linkedin

./: .gitignore  few_shot.py  llm_helper.py  main.py  post_generator.py  preprocess.py  pyproject.toml  test.ipynb
data/: processed_posts.json
data/processed_posts/: _7_.json  aman_gupta_7217a515.json  peyushbansal.json  posts.json
linkedin_post_extractor_extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
